src/objects/ERP_logfile__c.object
<CustomObject>
    <fields>
        <fullName>Import_message__c</fullName>
        <label>Import message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_records__c</fullName>
        <label>Number of records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ERP logfile</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP logfile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>